--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap.scss";
+//@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap.scss";
 
 @import "portfolio.scss";
 @import "custom-animations.scss";
