--- a/public/styles/responsive-lg.scss
+++ b/public/styles/responsive-lg.scss
@@ -46,10 +46,10 @@
   }
 
   .crossfade img {
-    width: 450px;
+    width: 510px;
   }
 
   .subsection-lg {
-    margin: 2rem;
+    margin: 3rem 0.5rem;
   }
 }
