--- a/public/styles/portfolio.scss
+++ b/public/styles/portfolio.scss
@@ -43,6 +43,10 @@ h4 {
   font-size: 1.5em;
 }
 
+h5 {
+  font-size: 1.2em;
+}
+
 
 /*** Sections ***/
 
@@ -179,6 +183,10 @@ ul.features {
   display: -webkit-flex;
   align-items: center;
   -webkit-align-items: center;
+}
+
+.large {
+  font-size: 115%;
 }
 
 .hover-swap {
