Add resume; Remove navbar collapse on mobile

--- a/public/styles/responsive-sm.scss
+++ b/public/styles/responsive-sm.scss
@@ -14,6 +14,10 @@
     font-size: 1em;
   }
 
+  h5 {
+    font-size: 1.2em;
+  }
+
   .splash-header-r {
     background-image: url("../images/city-md.jpg");
     height: 650px;
