--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -31,7 +31,8 @@ h4 {
   font-size: 1.5em; }
 
 h5 {
-  font-size: 1.2em; }
+  font-size: 1.6em;
+  font-weight: 600; }
 
 /*** Sections ***/
 .splash-header-r {
@@ -131,6 +132,19 @@ ul.features {
 
 .ss-interware {
   background-image: url("../images/interware-ss.jpg"); }
+
+/*** Bootstrap overrides ***/
+.navbar-collapse.collapse {
+  display: block !important; }
+
+.navbar-nav > li, .navbar-nav {
+  float: left !important; }
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important; }
+
+.navbar-right {
+  float: right !important; }
 
 /*** Utility ***/
 .flex-middle {
@@ -257,6 +271,9 @@ ul.features {
 
   p {
     font-size: 1em; }
+
+  h5 {
+    font-size: 1.2em; }
 
   .splash-header-r {
     background-image: url("../images/city-md.jpg");
