--- a/public/styles/portfolio.scss
+++ b/public/styles/portfolio.scss
@@ -44,7 +44,8 @@ h4 {
 }
 
 h5 {
-  font-size: 1.2em;
+  font-size: 1.6em;
+  font-weight: 600;
 }
 
 
@@ -173,6 +174,26 @@ ul.features {
 
 .ss-interware {
   background-image: url("../images/interware-ss.jpg");
+}
+
+/*** Bootstrap overrides ***/
+
+// Disable navbar collapse
+
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav > li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
 }
 
 
